applied styling and and added final to every single file, the whole game is operational, just need to finish prompts.txt